--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,14 @@
   "version": "1.0.0",
   "description": "The client for the Node React Startup Structure - created with create-react-app",
   "private": true,
-  "proxy": "3001",
+  "proxy": "http://localhost:3001",
   "dependencies": {
-    "react": "^16.8.5",
-    "react-dom": "^16.8.5",
-    "react-scripts": "^2.1.3"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.4.0",
+    "@testing-library/user-event": "^7.2.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-scripts": "3.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
